--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,6 +46,7 @@ dependencies {
     implementation 'com.google.android.material:material:1.3.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation 'androidx.palette:palette-ktx:1.0.0'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
@@ -58,4 +59,10 @@ dependencies {
     implementation "androidx.navigation:navigation-compose:1.0.0-alpha10"
 
     implementation 'de.hdodenhof:circleimageview:3.1.0'
+
+    //di
+    implementation "org.koin:koin-android:2.1.6"
+    implementation 'org.koin:koin-androidx-viewmodel:2.1.6'
+    implementation 'org.koin:koin-androidx-scope:2.1.6'
+    implementation "org.koin:koin-core:2.1.6"
 }
